# starknet-foundry

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
crates/cheatnet/src/runtime_extensions/forge_runtime_extension/: contracts_data.rs
crates/cheatnet/tests/common/: state.rs
crates/cheatnet/tests/starknet/: forking.rs
crates/forge-runner/src/: build_trace_data.rs  running.rs
crates/forge/tests/data/diagnostics_and_plugins/tests/: test_fork.cairo
crates/forge/tests/data/forking/src/: lib.cairo
crates/forge/tests/e2e/: diagnostics_and_plugins.rs  fork_warning.rs  forking.rs
crates/forge/tests/e2e/common/: runner.rs
crates/forge/tests/integration/: cheat_fork.rs  setup_fork.rs  spy_events.rs  store_load.rs
crates/shared/src/test_utils/: node_url.rs
crates/snforge-scarb-plugin/: Cargo.toml  Scarb.toml
crates/snforge-scarb-plugin/src/: args.rs  asserts.rs  attributes.rs  config_fn.rs  lib.rs  parse.rs  post_process.rs
crates/snforge-scarb-plugin/src/args/: named.rs  unnamed.rs
crates/snforge-scarb-plugin/src/attributes/: available_gas.rs  fork.rs  fuzzer.rs  ignore.rs  should_panic.rs  test.rs
crates/snforge-scarb-plugin/t/src/: lib.cairo
docs/src/development/: environment-setup.md
docs/src/starknet/: script.md
