[package]
name = "snforge-scarb-plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
cairo-lang-macro = { git = "https://github.com/software-mansion/scarb", rev = "cfa36ebfdaff9bd72792b0c2f45ac3449f5780a9" }
cairo-lang-macro-stable = { git = "https://github.com/software-mansion/scarb", rev = "cfa36ebfdaff9bd72792b0c2f45ac3449f5780a9" }
